fix font and spacing of simulation summary

--- a/www/style.css
+++ b/www/style.css
@@ -128,10 +128,11 @@ div.docpopup {
   background: #FFFFFF;
 }
 
-#simsummary {
+#simsummary,
+#simstatslabel {
   border-style: none;
   padding: 0px;
-  margin: 0px
+  margin: 0px;
 }
 #simcoef,
 #simstats {
